# forge

./: .gitignore  README.md  pyproject.toml
docs/: data-model.md  implementation-guide.md  spec.md  tech-stack.md
docs/adr/: ADR-001-triton-over-cuda.md  ADR-002-sqlite-cache.md  ADR-003-subprocess-isolation.md  ADR-004-statistical-benchmark.md  ADR-005-structured-llm-generation.md
examples/: decorator_demo.py  rmsnorm_search.py
src/forge/: __init__.py  decorator.py  ops.py  orchestrator.py
src/forge/benchmark/: statistics.py  timer.py
src/forge/cache/: key.py  repository.py
src/forge/codegen/: dtypes.py  triton_codegen.py
src/forge/codegen/templates/: gelu.py.jinja  layernorm.py.jinja  layernorm_multi_row.py.jinja  rmsnorm.py.jinja  rmsnorm_multi_row.py.jinja  rmsnorm_two_pass.py.jinja  softmax.py.jinja  softmax_multi_row.py.jinja
src/forge/ir/: hashing.py  kernel_spec.py  tensor_spec.py
src/forge/lowering/: __init__.py  gelu.py  layernorm.py  registry.py  rmsnorm.py  softmax.py
src/forge/runtime/: _worker_entry.py  loader.py  reference.py  worker.py
src/forge/search/: candidate.py  grid.py  llm_generator.py  params.py  random_search.py  space.py
src/forge/validation/: test_cases.py  tolerance.py
tests/: test_benchmark.py  test_cache.py  test_codegen.py  test_decorator.py  test_ir.py  test_llm_generator.py  test_lowering.py  test_orchestrator.py  test_search.py  test_validation.py  test_worker.py
