[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge"
version = "0.1.0"
description = "Automatic GPU kernel optimizer for PyTorch operations"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.3",
    "triton>=3.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
    "ruff>=0.4",
    "pyright>=1.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/forge"]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src/forge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = ["gpu: requires NVIDIA GPU (skip with -m 'not gpu')"]
